Experiments with style

--- a/assets/css/main-dark.scss
+++ b/assets/css/main-dark.scss
@@ -41,14 +41,14 @@ img {
 }
 
 .publication-block {
-    .publication-title {
-        width: fit-content;
-        margin: 0 !important;
-        font-weight: 600;
-        font-size: 90% !important;
+    // .publication-title {
+    //     width: fit-content;
+    //     margin: 0 !important;
+    //     font-weight: 600;
+    //     font-size: 90% !important;
 
-        a { color: #FFF }
-    }
+    //     a { color: #FFF }
+    // }
 
     .publication-venue {
         color: #555; // TODO:
