--- a/_layouts/publications.html
+++ b/_layouts/publications.html
@@ -12,7 +12,8 @@
   <link rel="stylesheet" href="/assets/css/fontawesome.all.min.css">
   <link rel="stylesheet" href="/assets://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
   <link rel="stylesheet" href="/assets/css/slider-component.css">
-  <!-- <link rel="stylesheet" href="/assets/css/index.css"> -->
+  <link rel="stylesheet" href="/assets/css/index.css">
+  <link rel="stylesheet" type="text/css" href="stylesheet.css">
   <link
     href="https://fonts.googleapis.com/css2?family=Google+Sans:wght@700&family=Noto+Sans:wght@400;500;600;700&display=swap"
     rel="stylesheet">
