--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -4,8 +4,8 @@
 // @import "base";
 
 .title {
-    font-family: 'Google Sans';
-    font-weight: 700;
+    font-family: 'Google Sans', sans-serif;
+    font-weight: 600;
 }
 
 .portrait {
