--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -1,105 +1,155 @@
----
----
-
-// @import "base";
-
-.title {
-    font-family: 'Google Sans', sans-serif;
-    font-weight: 600;
+--- --- body {
+    font-family: 'Noto Sans', sans-serif;
 }
 
-.portrait {
-    border-radius: 2%;
-    overflow: hidden;
-
-    img { transform: scale(1.2); }
-}
-
-.footer .footer-links a {
+.footer .icon-link {
     font-size: 25px;
     color: #000;
 }
 
-.publication-block {
-    .publication-title {
-        width: fit-content;
-        margin: 0 !important;
-        font-weight: 600;
-        font-size: 110% !important;
+.link-block a {
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
 
-        a { color: #000 }
-    }
+.dnerf {
+    font-variant: small-caps;
+}
 
-    .publication-venue {
-        color: #555;
-        width: fit-content;
-        margin-top: 0;
-    }
 
-    .publication-venue-emph {
-        font-style: normal;
-        font-size: 80%;
-        font-weight: 500;
-        color: firebrick;
-        padding-left: 0.25em;
-    }
+.teaser .hero-body {
+    padding-top: 0;
+    padding-bottom: 3rem;
+}
 
-    .publication-awards {
-        color: firebrick;
-        width: fit-content;
-        font-weight: bolder;
-    }
+.teaser {
+    font-family: 'Google Sans', sans-serif;
+}
 
-    .publication-authors {
-        .author-me {
-            color: #000;
-            font-weight: 600;
-        }
 
-        a {
-            color: #000 !important;
-        }
+.publication-title {}
 
-        a:hover {
-            text-decoration: underline;
-        }
-    }
+.publication-banner {
+    max-height: parent;
 
-    .publication-image {
-        border-radius: 2%;
-        width: 100%;
-        height: 100%;
-        overflow: hidden;
-        font-size: 0;
+}
 
-        img {
-            width: 100%;
-        }
-    }
+.publication-banner video {
+    position: relative;
+    left: auto;
+    top: auto;
+    transform: none;
+    object-fit: fit;
+}
 
-    .publication-mousecell {
-        position: relative;
-        font-size: 0;
-    }
+.publication-header .hero-body {}
 
-    .publication-mousecell {
-        width: 100%;
-        height: 100%;
-        display: inline-block;
-        overflow: hidden;
+.publication-title {
+    font-family: 'Google Sans', sans-serif;
+}
 
-        video {
-            display: none;
-        }
-    }
+.publication-authors {
+    font-family: 'Google Sans', sans-serif;
+}
 
-    .publication-description {
-        color: #333;
-        margin: 0.5em 0;
-    }
+.publication-venue {
+    color: #555;
+    width: fit-content;
+    font-weight: bold;
+}
 
-    .publication-links {
-        margin: 0 !important;
-        margin-top: 0.5em !important;
-    }
+.publication-awards {
+    color: #ff3860;
+    width: fit-content;
+    font-weight: bolder;
+}
+
+.publication-authors {}
+
+.publication-authors a {
+    color: hsl(204, 86%, 53%) !important;
+}
+
+.publication-authors a:hover {
+    text-decoration: underline;
+}
+
+.author-block {
+    display: inline-block;
+}
+
+.publication-banner img {}
+
+.publication-authors {
+    /*color: #4286f4;*/
+}
+
+.publication-video {
+    position: relative;
+    width: 100%;
+    height: 0;
+    padding-bottom: 56.25%;
+
+    overflow: hidden;
+    border-radius: 10px !important;
+}
+
+.publication-video iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.publication-body img {}
+
+.results-carousel {
+    overflow: hidden;
+}
+
+.results-carousel .item {
+    margin: 5px;
+    overflow: hidden;
+    padding: 20px;
+    font-size: 0;
+}
+
+.results-carousel video {
+    margin: 0;
+}
+
+.slider-pagination .slider-page {
+    background: #000000;
+}
+
+.eql-cntrb {
+    font-size: smaller;
+}
+
+.before,
+.after {
+    margin: 0;
+}
+
+.before figcaption,
+.after figcaption {
+    background: #fff;
+    border: 1px solid #c0c0c0;
+    border-radius: 4px;
+    color: #2e3452;
+    opacity: 0.6;
+    padding: 4px;
+    position: absolute;
+    bottom: 0px;
+    transform: translateY(-50%);
+    line-height: 100%;
+}
+
+.before figcaption {
+    left: 4px;
+}
+
+.after figcaption {
+    right: 4px;
 }
