--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -7,6 +7,8 @@ search: false
 
 @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
 @import "minimal-mistakes"; // main partials
+// @import "font-awesome-sprockets";
+// @import "font-awesome";
 
 article.page {
     float: left;
@@ -65,12 +67,12 @@ article.page {
         .author-me {
             color: #000;
             font-weight: 600;
-            font-size: 80%;
+            font-size: 100%;
         }
         
         a {
             color: #000 !important;
-            font-size: 80%;
+            font-size: 100%;
         }
 
         a:hover {
