--- a/_includes/head.html
+++ b/_includes/head.html
@@ -27,3 +27,5 @@
   <script src="{{ script | relative_url }}"></script>
   {% endfor %}
 {% endif %}
+
+<link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
