--- a/_layouts/publications.html
+++ b/_layouts/publications.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="/assets/css/style.css">
   <link rel="stylesheet" href="/assets/css/bulma.min.css">
   <link rel="stylesheet" href="/assets/css/bulma-carousel.min.css">
+  <link rel="stylesheet" href="/assets/css/carousel.css">
   <link rel="stylesheet" href="/assets/css/bulma-slider.min.css">
   <!-- <link rel="stylesheet" href="/assets/css/fontawesome.all.min.css"> -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
