--- a/assets/css/carousel.css
+++ b/assets/css/carousel.css
@@ -3,8 +3,8 @@
   width: 100%;
   height: 30%;;
   overflow: hidden;
-  border-radius: 100px;
-  border: 2px solid #ddd;
+  /* border-radius: 20px; */
+  /* border: 2px solid #ddd; */
 }
 
 .carousel-container {
